--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <div> 
-    <p>Hello Jitendra git </p>
+    <p>Hello  git </p>
 </div>
 <container>
     <div class="col-md-6">
-        <p>again i am going to update </p>
+        <p>Welcome to my demo page </p>
     </div>
 </container>
